# IdirFeinDesktop

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh  install_release.sh  meson.build  meson_options.txt  run.sh  setup_commands.sh
.helix/: ignore
assets/: com.github.leo030303.IdirFein.appdata.xml  com.github.leo030303.IdirFein.desktop  meson.build
build-aux/: com.github.leo030303.IdirFein.Devel.json  com.github.leo030303.IdirFein.json
build-aux/modules/: libonnxruntime.json  opencv.json
data/: com.github.leo030303.IdirFein.desktop.in.in  com.github.leo030303.IdirFein.gschema.xml.in  com.github.leo030303.IdirFein.metainfo.xml.in.in  meson.build
data/resources/: meson.build
locales/en-GB/: common.ftl  gallery_page.ftl  main.ftl  notes_page.ftl  passwords_page.ftl  settings_page.ftl  tasks_page.ftl
locales/ga/: main.ftl  passwords_page.ftl
po/: POTFILES.in
src/: app.rs  config.rs  constants.rs  constants.rs.in  lib.rs  main.rs  meson.build
src/pages/: file_manager.rs  gallery.rs  mod.rs  notes.rs  passwords.rs  settings.rs  tasks.rs
src/pages/file_manager/: page.rs  update.rs  view.rs
src/pages/gallery/: gallery_utils.rs  mod.rs  page.rs  update.rs  view.rs
src/pages/gallery/utils/: common.rs  face_extraction.rs  face_recognition.rs  mod.rs  text_recognition.rs  thumbnail_generation.rs
src/pages/notes/: mod.rs  notes_utils.rs  page.rs  update.rs  view.rs
src/pages/passwords/: mod.rs  page.rs  passwords_utils.rs  update.rs  view.rs
src/pages/settings/: mod.rs  page.rs  settings_utils.rs  update.rs  view.rs
src/pages/setup_wizard/: constants.rs  mod.rs  page.rs  setup_wizard_utils.rs  update.rs  view.rs
src/pages/sync/: mod.rs  page.rs  update.rs  view.rs
src/pages/tasks/: page.rs  update.rs  view.rs
src/passwords/: mod.rs  page.rs  passwords_utils.rs  update.rs  view.rs
src/utils/: auth_utils.rs  mod.rs  notes_utils.rs  passwords_handler.rs  passwords_utils.rs  socket_utils.rs  sync_config.rs  sync_utils.rs
