[package]
name = "idirfein_desktop_iced"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
bytes = "1.7.1"
iced = { git = "https://github.com/leo030303/iced", features = ["markdown", "lazy", "highlighter", "svg", "tokio", "image", "debug"]}
iced_aw = { git = "https://github.com/leo030303/iced_aw", default-features = false, features = ["badge", "drop_down", "spinner", "grid"] }
keepass = { version = "0.7.21", features = ["save_kdbx4"] }
once_cell = "1.20.1"
opener = "0.7.2"
rand = "0.8.5"
rfd = "0.14.1"
serde = "1.0.210"
serde_json = "1.0.128"
shiva = { version="1.2.0", default-features = false, features = ["html", "markdown", "pdf"] }
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"
