[package]
name = "idirfein_desktop_iced"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
bytes = "1.7.1"
dirs = "5.0.1"
iced = { git = "https://github.com/leo030303/iced", branch = "markdown_updates", features = ["markdown", "lazy", "highlighter", "svg", "tokio", "image", "debug"]}
iced_aw = { git = "https://github.com/leo030303/iced_aw", default-features = false, features = ["badge", "drop_down", "spinner", "drag_and_drop", "color_picker"] }
mdproof = { git = "https://github.com/leo030303/mdproof"}
keepass = { version = "0.7.21", features = ["save_kdbx4"] }
loro = "0.16.12"
once_cell = "1.20.1"
opener = "0.7.2"
pulldown-cmark = "0.12.2"
rand = "0.8.5"
regex = "1.11.0"
rfd = "0.14.1"
serde = "1.0.210"
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
