subdir('icons')
# TODO Add this back in if publishing
# install_data(
#   'com.github.leo030303.IdirFein.appdata.xml',
#   install_dir: join_paths(get_option('datadir'), 'metainfo')
# )

# Install desktop file
install_data(
  'com.github.leo030303.IdirFein.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications')
)
